<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >


    <item
        android:id="@+id/nav_myProfile"
        android:icon="@drawable/img_my_profile"
        android:title="@string/str_my_profile"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/img_notification"
        android:title="@string/str_notifications"/>

   <!-- <item
        android:id="@+id/nav_support_center"
        android:icon="@drawable/img_user"
        android:title="@string/str_support_center"/>-->
    <!--   <item
           android:id="@+id/nav_sessionSummery"
           android:icon="@drawable/ic_android_test"
           android:title="@string/str_session_summery" />-->
    <item
        android:id="@+id/nav_terms_of_use"
        android:icon="@drawable/img_terms_conditions"
        android:title="@string/str_terms_of_use"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/img_setting"
        android:title="@string/str_settings"/>
    <!-- <item
         android:id="@+id/nav_about_us"
         android:icon="@drawable/ic_android_test"
         android:title="@string/str_about_the_app" />-->
    <item
        android:id="@+id/nav_howItWorks"
        android:icon="@drawable/img_how_it_works"
        android:title="@string/str_how_it_works"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/img_logout"
        android:title="@string/str_logout"/>


    <!-- <item android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />
         </menu>
     </item>-->

</menu>
