<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white">

    <!-- <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">-->
    <include
        android:id="@+id/headerView"
        layout="@layout/header"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"/>

    <!--  </RelativeLayout>
  -->
    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="horizontal"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/drw_round_corner_gradient_blue"
            android:onClick="onClick"
            android:text="@string/str_previous"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/drw_round_corner_gradient_blue"
            android:onClick="onClick"
            android:text="@string/next"
            android:textColor="@android:color/white"/>

    </FrameLayout>

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_5sdp"
        android:background="@android:color/white"
        android:onClick="onClick"
        android:text="@string/str_skip"
        android:textColor="@android:color/black"/>

</FrameLayout>
