<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/remoteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="14dp"
            android:textColor="@color/homeCategory"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/callState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_incoming_call"
            android:textAllCaps="true"
            android:textColor="@color/homeCategory"
            android:textSize="16sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/answerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/drw_round_corner_gradient_blue"
            android:onClick="onClick"
            android:text="@string/str_answer"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"/>

        <Button
            android:id="@+id/declineButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/drw_round_corner_gradient_red"
            android:onClick="onClick"
            android:text="@string/str_decline"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"/>

    </LinearLayout>

</RelativeLayout>
