<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/drw_square_dark_blue"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/tv_headerTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp"/>

        </android.support.design.widget.AppBarLayout>

        <!-- <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_titleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/img_anivethub_logo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/drw_round_corner_grey"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_user"/>

                    <EditText
                        android:id="@+id/edt_userName"
                        style="@style/editTextStyle"
                        android:hint="@string/str_username"
                        android:inputType="textCapWords"
                        android:maxLength="50"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/drw_round_corner_grey"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_password"/>

                    <EditText
                        android:id="@+id/edt_password"
                        style="@style/editTextStyle"
                        android:hint="@string/str_password"
                        android:inputType="textPassword"
                        android:maxLength="20"/>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/chk_rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/str_remember_me"
                    android:textColor="#595959"
                    android:textSize="@dimen/_12sdp"/>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/newButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/str_login"/>

                <TextView
                    android:id="@+id/tv_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:onClick="onClick"
                    android:text="@string/str_forgot_your_password"
                    android:textColor="#595959"
                    android:textSize="@dimen/_12sdp"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/img_or"/>

                <Button
                    android:id="@+id/btn_signUp"
                    style="@style/newButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/str_sign_up"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_faceBook"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@drawable/img_btn_facebook_login"
                    android:onClick="onClick"/>

                <Button
                    android:id="@+id/btn_google"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/img_btn_google_login"
                    android:onClick="onClick"/>
            </LinearLayout>
        </LinearLayout>
        <!--</ScrollView>-->
    </LinearLayout>
</RelativeLayout>
