<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_online_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:text="@string/str_vet_status"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/img_dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/img_close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/lin_online"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgOnline"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/drw_circle_gradient_green" />

                <TextView
                    android:id="@+id/tv_online"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="@string/str_vet_status_online"
                    android:textColor="@color/hint"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_busy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgBusy"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/drw_circle_gradient_grey" />

                <TextView
                    android:id="@+id/tv_busy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="@string/str_vet_status_busy"
                    android:textColor="@color/hint"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgOffline"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/drw_circle_gradient_red" />

                <TextView
                    android:id="@+id/tv_offline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/str_vet_status_offline"
                    android:textColor="@color/hint"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
